# async_drop

./: Cargo.toml  README.md
src/: async_drop_ref.rs  async_drop_take.rs  lib.rs
